<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_banner_detail"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/item_pizza_caprize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_text_info_detail"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="6dp"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_banner_detail">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_title_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_tiitle_detail"
                android:textAlignment="textStart"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_text_price_detail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|end"
                android:text="@string/text_price_detail"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/id_deskripsi_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="2dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/layout_text_info_detail">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icon_store_detail"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_store"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_lokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:gravity="center|start"
                    android:text="@string/lokasi"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/icon_store_detail"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_lokation_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="jln semolowari tengah III no 16, Surabaya, Jawa Timur, 60119"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@id/text_lokasi"
                    app:layout_constraintTop_toBottomOf="@id/text_lokasi" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="18dp"
        android:paddingBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/layout_count_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="12dp">

            <ImageView
                android:id="@+id/icon_order_up"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_arrow_down" />

            <TextView
                android:id="@+id/text_count_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/text_count_order"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon_order_down"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_arrow_up" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_detail_button"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/layout_count_order" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>